wrapping fixes

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -65,10 +65,6 @@ iframe {
   flex-basis: calc(100% / 4);
 }
 
-.visible-xs {
-  display: none;
-}
-
 @media (min-width: 850px) {
   .half.tile img {
     max-width: $max-width/2
@@ -84,6 +80,18 @@ iframe {
     &:nth-child(2) {
       margin: 0 5rem;
     }
+  }
+}
+
+@media (max-width: 1080px) {
+  .row > .half.tile {
+    flex-basis: 100%;
+    margin: 0 auto;
+  }
+
+  .third.card {
+    flex-basis: 100%;
+    margin: 1rem auto;
   }
 }
 
