--- a/_sass/_tile.scss
+++ b/_sass/_tile.scss
@@ -8,9 +8,10 @@
 
 .tile {
   &.half.text {
+    display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     padding: 5em;
   }
 
@@ -56,7 +57,7 @@
   }
 }
 
-@media (max-width: 850px) {
+@media (max-width: 1080px) {
   .tiles.switch {
     .tile:first-of-type {
       order: 2;
