--- a/css/about.scss
+++ b/css/about.scss
@@ -83,7 +83,7 @@ iframe {
   }
 }
 
-@media (max-width: 840px) {
+@media (max-width: 1080px) {
   hr {
     display: block;
   }
