--- a/css/education.scss
+++ b/css/education.scss
@@ -73,6 +73,10 @@ li p {
 	ul {
 		margin-top: 0;
 	}
+
+	ul, ol {
+		line-height: 1.3;
+	}
 }
 
 .blurb {
@@ -104,3 +108,4 @@ li p {
 		font-size: 1.8rem;
 	}
 }
+
